name:                todoservant
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ptillemans/todoservant#readme
license:             BSD3
license-file:        LICENSE
author:              Peter Tillemans
maintainer:          pti@snamellit.com
copyright:           Copyright: (c) 2018 Peter Tillemans
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , User
                     , Todo
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
  default-language:    Haskell2010

executable todoservant-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , todoservant
  default-language:    Haskell2010

test-suite todoservant-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , todoservant
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ptillemans/todoservant
